--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NotCoin Clicker</title>
+    <title>Zikr Counter</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -13,22 +13,32 @@
         button {
             font-size: 20px;
             padding: 10px 20px;
+            margin: 5px;
+        }
+        .button-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
     </style>
 </head>
 <body>
-<h1>Zikr counter</h1>
-<p>Balance: <span id="balance">0</span></p>
-<button onclick="increment()">Subhanallah</button>
-<button onclick="increment()">Alhamdulillah</button>
-<button onclick="increment()">Allahu akbar</button>
+    <h1>Zikr Counter</h1>
+    <p>Balance: <span id="balance">0</span></p>
+    <div class="button-container">
+        <button onclick="increment('Subhanallah')">Subhanallah</button>
+        <button onclick="increment('Alhamdulillah')">Alhamdulillah</button>
+        <button onclick="increment('Allahu akbar')">Allahu akbar</button>
+    </div>
 
-<script>
-    let balance = 0;
-    function increment() {
-        balance++;
-        document.getElementById('balance').innerText = balance;
-    }
-</script>
+    <script>
+        let balance = 0;
+        function increment(phrase) {
+            balance++;
+            document.getElementById('balance').innerText = balance;
+            console.log(`Button clicked: ${phrase}`);
+        }
+    </script>
 </body>
 </html>
+
