--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
             font-family: Arial, sans-serif;
             text-align: center;
             margin-top: 50px;
-            /* Добавляем фоновое изображение */
-            background-image: url('background.jpg'); /* Замените на путь к вашему изображению */
-            background-size: contain; /* Покрытие всего фона */
-            background-position: center; /* Центрирование изображения */
-            background-repeat: no-repeat; /* Без повторения изображения */
+            background: linear-gradient(to right, #087cf8, #b4d0f3);
         }
 
         .button-container {
@@ -61,3 +57,4 @@
 </script>
 </body>
 </html>
+
