--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
             text-align: center;
             margin: 0;
             padding: 0;
-            background: linear-gradient(135deg, #a1c4fd, #c2e9fb); /* Градиент фона */
+            background: linear-gradient(45deg, red, yellow);
+            /* Градиент фона */
             overflow: hidden; /* Убирает прокрутку */
         }
 
@@ -48,7 +49,7 @@
         button {
             font-size: 16px;
             padding: 10px 15px;
-            background-color: #4CAF50;
+            background-color: #011020;
             color: white;
             border: none;
             border-radius: 50px;
