--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
             margin: 0;
             padding: 0;
             background: linear-gradient(45deg, red, yellow);
-            /* Градиент фона */
-            overflow: hidden; /* Убирает прокрутку */
+            overflow: hidden;
         }
 
         .container {
@@ -40,19 +39,19 @@
             bottom: 20px;
             display: flex;
             flex-direction: row;
-            gap: 10px; /* Расстояние между кнопками */
-            align-items: center; /* Выравнивание кнопок по центру */
+            align-items: center;
             justify-content: center;
             width: 100%;
         }
 
         button {
             font-size: 16px;
-            padding: 10px 15px;
+            width: 200px;
+            height: 200px;
             background-color: #011020;
             color: white;
             border: none;
-            border-radius: 50px;
+            border-radius: 50%;
             cursor: pointer;
             transition: background-color 0.3s;
         }
@@ -72,30 +71,25 @@
     <p class="balance">Balance: <span id="balance">0</span></p>
 </div>
 <div class="button-container">
-    <button onclick="increment()">Subhanallah</button>
-    <button onclick="increment()">Alhamdulillah</button>
-    <button onclick="increment()">Allahu akbar</button>
+    <button onclick="increment()">Subhanallah<br>Alhamdulillah<br>Allahu akbar</button>
 </div>
 
 <script>
-    // Функция для получения значения баланса из Local Storage
     function getBalance() {
         return parseInt(localStorage.getItem('balance')) || 0;
     }
 
-    // Функция для установки значения баланса в Local Storage
     function setBalance(value) {
         localStorage.setItem('balance', value);
     }
 
-    // Инициализация баланса при загрузке страницы
     let balance = getBalance();
     document.getElementById('balance').innerText = balance;
 
     function increment() {
         balance++;
         document.getElementById('balance').innerText = balance;
-        setBalance(balance); // Сохранение обновленного баланса в Local Storage
+        setBalance(balance);
     }
 </script>
 </body>
