--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             text-align: center;
             margin: 0;
             padding: 0;
-            background: linear-gradient(45deg, red, yellow);
+            background: linear-gradient(90deg, red, yellow);
             overflow: hidden;
         }
 
@@ -19,18 +19,18 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            height: 30vh;
         }
 
         .title {
             font-size: 2.5rem;
-            margin-bottom: 20px;
+            margin-top: 20px;
             color: #333;
         }
 
         .balance {
             font-size: 1.5rem;
-            margin-bottom: 40px;
+            margin-top: 20px;
             color: #333;
         }
 
@@ -46,8 +46,8 @@
 
         button {
             font-size: 16px;
-            width: 200px;
-            height: 200px;
+            width: 250px;
+            height: 250px;
             background-color: #011020;
             color: white;
             border: none;
@@ -57,11 +57,11 @@
         }
 
         button:hover {
-            background-color: #45a049;
+            background-color: #011049;
         }
 
         button:active {
-            background-color: #3e8e41;
+            background-color: #011024;
         }
     </style>
 </head>
