--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             text-align: center;
             margin: 0;
             padding: 0;
-            background: linear-gradient(90deg, red, yellow);
+            background: linear-gradient(90deg, #ff2f00, #ffcc00);
             overflow: hidden;
         }
 
@@ -60,9 +60,7 @@
             background-color: #011049;
         }
 
-        button:active {
-            background-color: #011024;
-        }
+
     </style>
 </head>
 <body>
