--- a/index.html
+++ b/index.html
@@ -48,16 +48,22 @@
             font-size: 16px;
             width: 250px;
             height: 250px;
-            background-color: #FF4F00;
+            background-color: 	#011049;
             color: white;
             border: none;
             border-radius: 50%;
             cursor: pointer;
             transition: background-color 0.3s;
+            outline: none;
         }
 
         button:hover {
             background-color: #011049;
+        }
+
+        button:active {
+            background-color: #011024;
+            transform: scale(0.95); /* Эффект нажатия */
         }
 
 
