--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
             outline: none;
         }
 
-       
+        button:hover {
+            background-color: #011049;
+        }
 
         button:active {
             background-color: #011024;
