--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             cursor: pointer;
             transition: background-color 0.3s;
             outline: none;
+            box-shadow: none; /* Убираем свечение */
         }
 
         button:hover {
@@ -64,6 +65,7 @@
         button:active {
             background-color: #011049;
             transform: scale(0.95); /* Эффект нажатия */
+            box-shadow: none; /* Убираем свечение */
         }
 
         .ranking {
@@ -164,3 +166,4 @@
 </script>
 </body>
 </html>
+
