--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             cursor: pointer;
             transition: background-color 0.3s;
             outline: none;
-            box-shadow: none; /* Убираем свечение */
+            -webkit-tap-highlight-color: transparent;
         }
 
         button:hover {
@@ -65,7 +65,7 @@
         button:active {
             background-color: #011049;
             transform: scale(0.95); /* Эффект нажатия */
-            box-shadow: none; /* Убираем свечение */
+            -webkit-tap-highlight-color: transparent;
         }
 
         .ranking {
