--- a/index.html
+++ b/index.html
@@ -70,15 +70,17 @@
         }
 
         .ranking {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            width: 250px;
-            background-color: white;
-            border: 1px solid #ddd;
-            border-radius: 10px;
-            padding: 10px;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        width: 250px;
+        background-color: white;
+        border: 1px solid #ddd;
+        border-radius: 10px;
+        padding: 10px;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+        z-index: 100; /* Это обеспечит, что блок рейтинга будет поверх других элементов, если нужно */
+    }
         }
 
         .ranking h2 {
