--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -69,20 +68,18 @@
             -webkit-tap-highlight-color: transparent;
         }
 
-
-            .ranking {
-                position: absolute;
-                top: 35%;
-                left: 50%;
-                transform: translate(-50%, -50%); /* Центрирует блок по горизонтали и вертикали */
-                width: 250px;
-                background-color: white;
-                border: 1px solid #ddd;
-                border-radius: 10px;
-                padding: 10px;
-                box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+        .ranking {
+            position: absolute;
+            top: 35%;
+            left: 50%;
+            transform: translate(-50%, -50%); /* Центрирует блок по горизонтали и вертикали */
+            width: 250px;
+            background-color: white;
+            border: 1px solid #ddd;
+            border-radius: 10px;
+            padding: 10px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
         }
-
 
         .ranking h2 {
             margin-top: 0;
@@ -122,6 +119,17 @@
 </div>
 
 <script>
+    function getUsername() {
+        let username = localStorage.getItem('username');
+        if (!username) {
+            username = prompt("Введите ваше имя:", "");
+            if (username) {
+                localStorage.setItem('username', username);
+            }
+        }
+        return username;
+    }
+
     async function fetchRanking() {
         try {
             const response = await fetch('/api/ranking');
@@ -164,6 +172,7 @@
     }
 
     document.addEventListener('DOMContentLoaded', () => {
+        getUsername();  // Получаем имя пользователя
         fetchRanking();
         setInterval(fetchRanking, 60000); // Обновлять рейтинг каждую минуту
     });
